Fix the sphinx-build detection
The former way was only working with a sphinx-build binary, it was first
calling sphinx-build2 without any argument and then sphinx-build with
them.

Signed-off-by: Wieland Hoffmann <themineo@gmail.com>

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -3,7 +3,7 @@
 
 # You can set these variables from the command line.
 SPHINXOPTS    =
-SPHINXBUILD   = sphinx-build2 || sphinx-build
+SPHINXBUILD   = $(shell command -v sphinx-build || command -v sphinx-build2)
 PAPER         =
 BUILDDIR      = _build
 
