Support only requests versions that requests-mock works with
Test only the lowest one and the most recent one - let's hope there are
no breaking changes in between (there were none at the time of this
commit).

Signed-off-by: Wieland Hoffmann <themineo@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
-envlist=py26,py27,py32,py33,py34,py35
+envlist=py{26,27,32,33,34,35,py}-requests-{minimum,current}
 [testenv]
 deps=
-    requests
+    requests-minimum: requests==2.1.0
+    requests-current: requests
     requests-mock
 commands=python setup.py test
